one entry per date

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,30 @@
 ﻿# Notion Configuration
 # Get your token from: https://www.notion.so/my-integrations
-NOTION_TOKEN=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
+NOTION_TOKEN=secret_your_notion_token_here
 
 # Notion Database ID
 # Get from your database URL: https://www.notion.so/workspace/DATABASE_ID?v=...
-NOTION_DATABASE_ID=2e127ee3343880e7b062d4e20959eb93
+NOTION_DATABASE_ID=your_database_id_here
 
 # GitHub Configuration (Optional)
 # Get your token from: https://github.com/settings/tokens
-GITHUB_TOKEN=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
-GITHUB_USERNAME=jagmohanmeher1
+GITHUB_TOKEN=ghp_your_github_token_here
+GITHUB_USERNAME=your_github_username
+
+# AI Configuration - Ollama (Recommended: Free, Local)
+# Install Ollama from https://ollama.com
+# Then run: ollama pull llama3.2
+USE_OLLAMA=true
+OLLAMA_MODEL=llama3.2
+
+# OpenAI Configuration (Optional, fallback if Ollama not available)
+# Get your API key from: https://platform.openai.com/api-keys
+# OPENAI_API_KEY=sk-your_openai_api_key_here
 
 # Project Paths to Scan (comma-separated)
 # Windows paths: d:\projects, c:\dev
 # WSL paths: /mnt/d/projects, /home/user/projects
 PROJECT_PATHS=d:\projects
+
+# How many days back to process (default: 7)
+DAYS_BACK=7
